# philly-parking-benefit-districts

./: .env.example  .gitignore  CLAUDE.md  README.md  environment.yml  pyproject.toml
app/: streamlit_app.py
app/pages/: 1_Map.py  2_Scenario_Comparison.py  3_Revenue_Forecast.py  4_Equity_Analysis.py
config/: elasticity_priors.yaml  pricing_rules.yaml  scenarios.yaml  zones.yaml
docs/: PLAN.md
docs/rtkl/: README.md  cover-letter-council.md  oor-appeal-template.md  rtkl-request-ppa.md
notebooks/: 00_setup_check.ipynb  01_data_acquisition.ipynb  02_spatial_panel_construction.ipynb  03_synthetic_baseline_demand.ipynb  04_elasticity_bayesian.ipynb  05_seattle_pricing_simulation.ipynb  06_revenue_scenarios.ipynb  07_welfare_incidence.ipynb  08_chatman_manville_test.ipynb  09_scenario_comparison.ipynb
notebooks/paper/: 01-introduction.qmd  02-methods.qmd  03-results.qmd  04-discussion.qmd  _quarto.yml  index.qmd
outputs/reports/white_paper/: Report.tex  philadelphia_curb_pricing_white_paper.md
outputs/tables/: cm_sweep_n200.parquet  comparison_table.csv
research/: demand-based-curb-parking-pricing-model-for-philadelphia---claude-2026-04-28.md
scripts/: 01_download_public_data.py  02_build_segments.py  03_fit_baseline_demand.py  04_fit_elasticity.py  05_run_scenarios.py  06_export_paper_figures.py  build_notebooks.py
src/phillyparking/: __init__.py  _config.py  cli.py
src/phillyparking/demand/: __init__.py  features.py  ml_occupancy.py  occupancy_estimator.py  (+1 more)
tests/: test_apply_elasticity.py  test_arnott_inci.py  test_calibration.py  test_chatman_manville.py  test_consumer_surplus.py  test_cruising_dwl.py  test_e2e.py  test_elasticity_priors.py  test_features.py  test_hierarchical_bayes.py  test_incidence.py  test_ml_occupancy.py  test_occupancy_estimator.py  test_optimizer.py  test_ppa_stub.py  test_revenue_allocation.py  test_revenue_forecast.py  test_runner.py  test_seattle_rule.py  test_segments.py  test_synthetic_baseline.py  test_zones.py
tests/fixtures/: __init__.py
(+42 files in other folders)
